V2 fixing overflow
V2 fixing overflow

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .mynavbar .container{
- width: 450px;
+ max-width: 450px;
  background-color: white !important;
  border-radius: 7px;
  box-shadow: 2px 2px 6px rgba(0,0,0, 0.3), 0 -0.5px 5px rgba(0,0,0, 0.15);
@@ -447,7 +447,7 @@ footer .sosmed a{
 
     .mynavbar .container {
     padding: 8px 0px;
-    max-width: 100vw;
+    max-width: 90vh;
     justify-content: space-around;
     }
 
@@ -463,10 +463,6 @@ footer .sosmed a{
         align-items: center;
         line-height: none;
         cursor: pointer;
-    }
-
-    .sticky-top {
-        overflow: hidden;
     }
 
     .home .couple h4,
